Setting the overflow-y from Content to auto to prevent navigation drawer vertical scroll

--- a/src/scss/Content.scss
+++ b/src/scss/Content.scss
@@ -1,5 +1,6 @@
 .content{
     width: 100%;
     height: 100%;
+    overflow-y: auto;
     padding: 30px;
 }
